bug(headers):resize and align right
make hearder links align right, and reduse height of nav Bar.

[finishes #166076311]

--- a/UI/css/adminUnverified.css
+++ b/UI/css/adminUnverified.css
@@ -125,7 +125,7 @@ footer{
     z-index: 700; */
     width: 100%;
     justify-content: space-around;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -140,7 +140,7 @@ footer{
 }
 #navHead {
     box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
     justify-content: flex-start;
@@ -197,15 +197,15 @@ footer{
     text-align: center;
     padding-left: 20px;
     align-items: center;
-    justify-content: space-around;
-    flex-basis: 50%;
+    justify-content: flex-end;
+    flex-basis: 75%;
 }
 #secondHead{
     display: flex;
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -269,28 +269,17 @@ footer{
     #repaymentTable{
         width: 100%;
     }
-    #navHead {
-        padding-left: 20px;
-        flex-basis: 25%;
-    }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #navHead {
         display: none;
     }
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navUser{
         display: block;
@@ -508,6 +497,6 @@ width: 80%;
 }
 @media(max-width:1000px){
     #adminContent{
-        margin-top: 87px;
+        margin-top: 60px;
     }
 }
