--- a/UI/css/userDashbord.css
+++ b/UI/css/userDashbord.css
@@ -109,7 +109,7 @@ footer{
     top: 0;
     z-index: 700; */
     width: 100%;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -134,14 +134,6 @@ footer > a {
 #navWide{
     cursor: pointer;
 }
-#navHead {
-    flex-basis: 10%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 25px;
-}
 #logoSpace{
     width: 80%;
     margin: auto;
@@ -163,12 +155,12 @@ footer > a {
 #titleOfPage > p{
    margin: 0px;
 }
+
 #navHead {
-    box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     font-size: 25px;
 }
@@ -199,8 +191,8 @@ footer > a {
     padding: 5px;
     text-align: center;
     align-items: center;
-    justify-content: space-around;
-    flex-basis: 50%;
+    justify-content: flex-end;
+    flex-basis: 80%;
 }
 #secondHead{
     padding-right: 30px;
@@ -208,7 +200,7 @@ footer > a {
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -412,25 +404,14 @@ footer > a {
     #repaymentTable{
         width: 100%;
     }
-    #navHead {
-        padding-left: 20px;
-        flex-basis: 25%;
-    }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navUser{
         display: block;
@@ -594,13 +575,13 @@ footer > a {
 
 @media(max-width:1000px){
     #userLoanApply{
-        margin-top: 87px;
+        margin-top: 60px;
     }
     #userDashbord{
-        margin-top: 87px;
+        margin-top: 60px;
     }
     #adminContent{
-        margin-top: 87px;
+        margin-top: 60px;
     }
 }
 .fa-facebook-f,.fa-google-plus-g,.fa-linkedin-in,.fa-twitter{
