--- a/UI/css/userLoan.css
+++ b/UI/css/userLoan.css
@@ -144,7 +144,7 @@ footer{
     top: 0;
     z-index: 700; */
     width: 100%;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -184,7 +184,7 @@ footer{
 }
 #navHead {
     box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
     justify-content: flex-start;
@@ -217,8 +217,8 @@ footer{
     padding-left: 20px;
     align-items: center;
     text-align: center;
-    justify-content: space-around;
-    flex-basis: 50%;
+    justify-content: flex-end;
+    flex-basis: 75%;
 }
 #secondHead{
     padding-right: 30px;
@@ -226,7 +226,7 @@ footer{
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -290,21 +290,14 @@ footer{
         padding-left: 20px;
         flex-basis: 25%;
     }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navUser{
         display: block;
@@ -502,7 +495,7 @@ padding-left: 30px;
 }
 @media(max-width:1000px){
     #userLoanApply{
-        margin-top: 87px;
+        margin-top: 60px;
     }
     #userDashbord{
         margin-top: 87px;
