--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -122,7 +122,7 @@ footer > a {
     top: 0;
     z-index: 700; */
     width: 100%;
-    height: 87px;
+    height: 60px;
     background-color: indigo;
     color: #ECEEE8;
 }
@@ -151,7 +151,7 @@ footer > a {
 }
 #navHead {
     box-sizing: border-box;
-    flex-basis: 20%;
+    flex-basis: 10%;
     text-align: center;
     display: flex;
     justify-content: flex-start;
@@ -184,8 +184,8 @@ footer > a {
     text-align: center;
     padding-left: 20px;
     align-items: center;
-    justify-content: space-around;
-    flex-basis: 50%;
+    justify-content: flex-end;
+    flex-basis: 75%;
 }
 #secondHead{
     padding-right: 30px;
@@ -193,7 +193,7 @@ footer > a {
     box-sizing: border-box;
     justify-content: flex-end;
     align-items: center;
-    flex-basis: 20%;
+    flex-basis: 10%;
 }
 #userImage{
     border: 2px solid white;
@@ -291,21 +291,14 @@ footer > a {
         padding-left: 20px;
         flex-basis: 25%;
     }
-    #firstHead{
-        flex-basis: 50%;
-    }
-    #secondHead{
-        padding-right: 20px;
-        flex-basis: 25%;
-    }
 }
 @media(max-width: 1000px){
     #firstHead{
-        flex-basis: 50%;
+        flex-basis: 90%;
     }
     #secondHead{
         padding-right: 20px;
-        flex-basis: 50%;
+        flex-basis: 10%;
     }
     #navHead {
         display: none;
@@ -551,7 +544,7 @@ footer > a {
 }
 @media(max-width:1000px){
     #userProfile{
-        margin-top: 87px;
+        margin-top: 60px;
     }
 }
 @media (max-width:790px){   
